# swal

./: .gitignore  CMakeLists.txt  swal-config.cmake
include/swal/: com.h  error.h  gdi.h  handle.h  hinstance.h  menu.h  reg.h  win_headers.h  window.h  zero_or_resource.h
